<resources>
    <string name="app_name">Jogo Da Velha</string>
    <string name="title_splash">Jogo Da Velha</string>
    <string name="title_app_version">Versão 1.0.0</string>
    <string name="title_find_players">Encontre jogadores e divirta-se.</string>
    <string name="title_found_player">Você irá jogar com: </string>
    <string name="title_observation">Primeiro conecte-se a mesma rede do outro jogador.</string>
    <string name="title_player_one">Jogar X: </string>
    <string name="title_player_two">Jogar 0: </string>
    <string name="title_button_find_players">Encontrar jogador</string>
    <string name="title_button_play_it">Iniciar Jogo</string>
    <string name="title_button_search">Buscar</string>
    <string name="title_button_login">Entrar</string>
    <string name="title_button_create">Criar conta</string>
    <string name="label_create_account">Crie sua conta.</string>
    <string name="title_button_enter_server">Entrar em uma sala</string>
    <string name="no_player_connected">Nenhum jogador conectado a mesma rede que você.</string>
    <string name="title_left_game">Sair</string>
    <string name="title_reset_game">Resetar</string>
    <string name="message_info_dialog">Mensagem</string>
    <string name="message_info_content">Você deseja realmente sair?</string>
    <string name="message_yes">Sim</string>
    <string name="message_no">Não</string>
    <string name="error_set_value_in_text_view">Esse campo já se encontra preenchido!</string>
    <string name="invalid_number_class">Nenhum número para sala foi informado</string>
    <string name="hint_edit_text_number_class">Informe o número da sala</string>
    <string name="hint_username">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome e Sobrenome</string>
    <string name="hint_search_by_email">Buscar jogador pelo E-mail</string>
    <string name="hint_email">E-mail</string>
    <string name="invalid_password_">Por favor, preencha a Senha</string>
    <string name="email_invalid">Por favor, preencha o E-mail</string>
    <string name="name_invalid">Por favor, preencha o Nome e Sobrenome</string>
    <string name="username_invalid">Por favor, preencha o Username</string>
    <string name="register_success">Cadastro realizado com sucesso!</string>
    <string name="error_login">Usuário ou Senha incorretos ou cadastro não criado!</string>
    <string name="loagind">Carregando...</string>
    <string name="searching">Buscando jogador...</string>
    <string name="no_search_myself">Você não pode buscar e jogar com você mesmo!</string>
    <string name="default_notification_channel_id">8887826618435967631</string>
    <string name="default_no_internet">Verifique sua conexão com a internet, tente novamente!</string>
</resources>
