<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SplashTheme"
    tools:context=".Main">

    <ImageView
        android:layout_marginBottom="6dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/name_game"
        android:id="@+id/img_slash"
        android:src="@drawable/ic_app"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <TextView
        android:textColor="@color/colorBlack"
        android:id="@+id/name_game"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_username"
        android:hint="@string/hint_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/name_game"/>

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/edt_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_username"/>

    <Button
        android:elevation="4dp"
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edt_password"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorWhite"
        android:text="@string/title_button_login"
        android:background="@drawable/shape_button"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/txt_create_account"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/label_create_account"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/btnSignIn"
        android:padding="6dp"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>